--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1680,19 +1680,24 @@ for (let i = 1; i < task.users.length; i++) {
   task.completions[today].push(currentUser);
 
   // 🔁 Rotate turn to next user if needed
-  // 🔁 Rotate turn immediately after user completes
-const currentIndex = task.users.indexOf(currentUser);
-const nextUser = task.users[(currentIndex + 1) % task.users.length];
-task.tempTurnReplacement = {
-  original: task.tempTurnReplacement?.original || currentUser,
-  replacement: nextUser,
-};
+// 🔁 Only rotate turn when this user has finished all required turns
+const newUserCompletions = task.completions[today].filter(u => u === currentUser).length;
 
-// ✅ Remove tempTurnReplacement only when fully completed
-const totalCompletions = task.completions[today].length;
-if (totalCompletions >= requiredTimes) {
-  delete task.tempTurnReplacement;
+if (newUserCompletions >= requiredTimes) {
+  const currentIndex = task.users.indexOf(currentUser);
+  const nextUser = task.users[(currentIndex + 1) % task.users.length];
+
+  // Set new temp turn only if multiple users share this task
+  if (nextUser !== currentUser) {
+    task.tempTurnReplacement = {
+      original: task.tempTurnReplacement?.original || currentUser,
+      replacement: nextUser
+    };
+  } else {
+    delete task.tempTurnReplacement; // Only one user
+  }
 }
+
 
 
   // 💾 Save to backend
