--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -452,6 +452,60 @@ body {
     z-index: 10;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+.task-item {
+    padding: 16px;
+    background: #2A2B32;
+    color: #FFFFFF;
+    border: 2px solid var(--border-dark);
+    border-radius: 12px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    position: relative;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.task-item.swiped-left {
+    transform: translateX(-100px); /* Slide the task to the left */
+}
+
+.task-item.swiped-left .delete-btn {
+    display: block; /* Show the delete button when task is swiped left */
+}
+
+.delete-btn {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    background-color: var(--danger-color);
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    display: none; /* Hidden by default */
+    transition: background-color 0.3s ease;
+}
+
+.delete-btn:hover {
+    background-color: #B71C1C;
+}
+
+
         
     </style>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -527,6 +581,10 @@ body {
 
 
 
+
+
+
+
     async function loadTasksForDate(selectedDate) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     if (!adminEmail) return;
@@ -562,6 +620,17 @@ body {
         const taskDiv = document.createElement("div");
         taskDiv.className = "task-item";
 
+        // Add the delete button inside the task item but hide it initially
+        const deleteButton = document.createElement("button");
+        deleteButton.className = "delete-btn";
+        deleteButton.textContent = "Delete";
+        deleteButton.style.display = "none"; // Hidden by default
+        deleteButton.addEventListener("click", () => {
+            deleteTask(index); // Call the deleteTask function on button click
+        });
+
+        taskDiv.appendChild(deleteButton);
+
         // Determine repeat count
         let repeatLimit = 1;
         if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
@@ -576,21 +645,81 @@ body {
         let currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
 
         // Show task info
-        taskDiv.innerHTML = `
+        taskDiv.innerHTML += `
             <strong>${task.title}</strong><br>
             Turn: ${currentTurn}<br>
             ${repeatLimit > 1 ? `Completed: ${completedCount}/${repeatLimit}<br>` : ""}
             ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
         `;
 
-        // Click opens details
-        taskDiv.addEventListener("click", () => {
-            showTaskDetails(task);
-        });
+        // Add swipe detection
+        taskDiv.addEventListener("touchstart", handleTouchStart, false);
+        taskDiv.addEventListener("touchend", handleTouchEnd, false);
 
+        // Append the task to the task list
         taskList.appendChild(taskDiv);
     });
 }
+
+let touchstartX = 0;
+let touchendX = 0;
+
+function handleTouchStart(e) {
+    touchstartX = e.changedTouches[0].screenX;
+}
+
+function handleTouchEnd(e) {
+    touchendX = e.changedTouches[0].screenX;
+
+    if (touchstartX - touchendX > 150) { // Swipe left threshold
+        this.classList.add("swiped-left"); // Show delete button
+    } else {
+        this.classList.remove("swiped-left"); // Hide delete button if swipe isn't enough
+    }
+}
+
+function deleteTask(index) {
+    const tasks = JSON.parse(localStorage.getItem("familyApp_tasks")) || [];
+    tasks.splice(index, 1); // Remove the task from the array
+    localStorage.setItem("familyApp_tasks", JSON.stringify(tasks)); // Save the updated list to localStorage
+
+    // Also delete from backend
+    deleteTaskFromBackend(tasks[index].title); // Pass the task title (or unique identifier)
+
+    loadTasksForDate(document.querySelector(".day.selected")?.dataset.date); // Reload the task list
+}
+
+async function deleteTaskFromBackend(taskTitle) {
+    const adminEmail = localStorage.getItem("currentAdminEmail");
+    if (!adminEmail) return;
+
+    try {
+        const response = await fetch("https://beemazing.onrender.com/api/tasks", {
+            method: "DELETE",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ adminEmail, taskTitle }),
+        });
+
+        const result = await response.json();
+        if (result.success) {
+            console.log("Task deleted from backend");
+        } else {
+            console.log("Failed to delete task from backend");
+        }
+    } catch (error) {
+        console.error("Error deleting task from backend:", error);
+    }
+}
+
+
+
+
+
+
+    
+
 
 
 
@@ -1253,6 +1382,47 @@ function getNextUsers(task) {
   return nextUsers;
 }
 
+
+
+
+
+
+
+
+function deleteTask(index) {
+    const tasks = JSON.parse(localStorage.getItem("familyApp_tasks")) || [];
+    tasks.splice(index, 1); // Remove the task from the array
+    localStorage.setItem("familyApp_tasks", JSON.stringify(tasks)); // Save the updated list to localStorage
+
+    // Also delete from backend
+    deleteTaskFromBackend(tasks[index].title); // Pass the task title (or unique identifier)
+
+    loadTasksForDate(document.querySelector(".day.selected")?.dataset.date); // Reload the task list
+}
+
+async function deleteTaskFromBackend(taskTitle) {
+    const adminEmail = localStorage.getItem("currentAdminEmail");
+    if (!adminEmail) return;
+
+    try {
+        const response = await fetch("https://beemazing.onrender.com/api/tasks", {
+            method: "DELETE",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ adminEmail, taskTitle }),
+        });
+
+        const result = await response.json();
+        if (result.success) {
+            console.log("Task deleted from backend");
+        } else {
+            console.log("Failed to delete task from backend");
+        }
+    } catch (error) {
+        console.error("Error deleting task from backend:", error);
+    }
+}
 
 
     </script>
